Primera parte froms

--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -84,7 +84,7 @@
     <div class="form-group">
         <input type="text" class="form-control" id="rut_alienator" placeholder="RUT Enajenante">
         <input type="number" class="form-control" id="percent_alienator" min="1" max="100" placeholder="% de Derecho">
-        <input type="checkbox" class="form-check-input" id="not_percent_alienator"> Sin Porsentaje de Derecho
+        <input type="checkbox" class="form-check-input" id="not_percent_alienator"> Sin Porcentaje de Derecho
         <button type="button" class="btn btn-outline-primary" id="new_alienator">Agregar Enajenante</button>
     </div>
 
@@ -105,7 +105,7 @@
     <div class="form-group">
         <input type="text" class="form-control" id="rut_acquirer" placeholder="RUT Enajenante">
         <input type="number" class="form-control" id="percent_acquirer" min="1" max="100" placeholder="% de Derecho">
-        <input type="checkbox" class="form-check-input" id="not_percent_acquirer"> Sin Porsentaje de Derecho
+        <input type="checkbox" class="form-check-input" id="not_percent_acquirer"> Sin Porcentaje de Derecho
         <button type="button" class="btn btn-outline-primary" id="new_acquirer">Agregar Adquiriente</button>
     </div>
 
@@ -123,7 +123,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <button id="submit_button" name="users_info" type="submit" value="" class="btn btn-default" >Enviar</button>
         </div>
     </div>
 </div>
