--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -3,6 +3,7 @@
         @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/bundles/inscription/create")
 
+
     }
     @{
         ViewBag.Title = "Create";
@@ -23,8 +24,7 @@
             @Html.LabelFor(model => model.CNE, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.CNE, new List<SelectListItem>
-                {
-                    
+                { 
                     new SelectListItem { Text = "Regularización de Patrimonio", Value = "Regularización de Patrimonio" }
                 }, "-- Seleccione CNE", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CNE, "", new { @class = "text-danger" })
@@ -82,14 +82,33 @@
             </div>
         </div>
         <br />
+        <h5>Enajenantes:</h5>
+        <div class="form-group">
+            <input type="text" class="form-control" id="rut_alienator" placeholder="RUT Enajenante">
+            <input type="number" class="form-control" id="percent_alienator" min="1" max="100" placeholder="% de Derecho">
+            <input type="checkbox" class="form-check-input" id="not_percent_alienator"> Sin Porcentaje de Derecho
+            <button type="button" class="btn btn-outline-primary" id="new_alienator">Agregar Enajenante</button>
+        </div>
 
+        <div class="col-md-6">
+            <table class="table table-bordered" id="alienators">
+                <thead>
+                    <tr>
+                        <th>RUT Enajenante</th>
+                        <th>% de Derecho</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
         <br />
         <h5>Adquirientes:</h5>
         <div class="form-group">
             <input type="text" class="form-control" id="rut_acquirer" placeholder="RUT Enajenante">
             <input type="number" class="form-control" id="percent_acquirer" min="1" max="100" placeholder="% de Derecho">
             <input type="checkbox" class="form-check-input" id="not_percent_acquirer"> Sin Porcentaje de Derecho
-            <button type="button" class="btn btn-outline-primary" id="new_acquirer">Agregar Adquiriente</button>
+            <button type="button" class="btn btn-outline-primary" id="add_acquirer">Agregar Adquiriente</button>
         </div>
 
         <div class="col-md-6">
