--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -1,39 +1,41 @@
-﻿    @model WebApplication1.Models.Inscription
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-        @Scripts.Render("~/bundles/inscription/create")
+﻿@model WebApplication1.Models.Inscription
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/inscription/create")
 
 
-    }
-    @{
-        ViewBag.Title = "Create";
-    }
-
-    <h2>Inscripción</h2>
+}
+@{
+    ViewBag.Title = "Create";
+}}
 
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+
+<h2>Inscripción</h2>
+
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <h4>LLenar los datos</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CNE, htmlAttributes: new { @class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.CNE, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.CNE, new List<SelectListItem>
                 {
                     new SelectListItem { Text = "-- Seleccione CNE", Value = "" },
                     new SelectListItem { Text = "Compraventa", Value = "Compraventa" },
                     new SelectListItem { Text = "Regularización de Patrimonio", Value = "Regularización de Patrimonio" }
-                },new { @class = "form-control", id = "cne_select" })
+                }, new { @class = "form-control", id = "cne_select" })
                 @Html.ValidationMessageFor(model => model.CNE, "", new { @class = "text-danger" })
             </div>
         </div>
         @{
-            var comunas = new List<string> { "Estación Central", "Huechuraba", "Las Condes", "La Dehesa", "La Florida", "La Reina","Lo Barnechea","Lo Espejo","Ñuñoa", "Quilicura", "Santiago", "Vitacura" };
+            var comunas = new List<string> { "Estación Central", "Huechuraba", "Las Condes", "La Dehesa", "La Florida", "La Reina", "Lo Barnechea", "Lo Espejo", "Ñuñoa", "Quilicura", "Santiago", "Vitacura" };
         }
         <div class="form-group">
             @Html.LabelFor(model => model.Comunne, "Comuna", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -83,7 +85,7 @@
             </div>
         </div>
         <br />
-        <div id="all_alienators" style>
+        <div id="all_alienators">
             <h5>Enajenantes:</h5>
             <div class="form-group">
                 <input type="text" class="form-control" id="rut_alienator" placeholder="RUT Enajenante">
@@ -106,7 +108,8 @@
             </div>
         </div>
         <br />
-        <h5>Adquirientes:</h5>
+
+        <h5 id="acquirer_title">Adquirientes:</h5>
         <div class="form-group">
             <input type="text" class="form-control" id="rut_acquirer" placeholder="RUT Enajenante">
             <input type="number" class="form-control" id="percent_acquirer" min="1" max="100" placeholder="% de Derecho">
@@ -132,10 +135,10 @@
             </div>
         </div>
     </div>
-    }
+}
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 
