--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -40,7 +40,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Comunne, "Comuna", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Comunne, new SelectList(comunas), "-- Seleccione una comuna --", new { @class = "form-control" })
+                @Html.DropDownListFor(
+               model => model.Comunne, new SelectList(comunas), "-- Seleccione una comuna --", new { @class = "form-control", id = "commune_select" }
+               )
                 @Html.ValidationMessageFor(model => model.Comunne, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Block, "Manzana", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Block, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Block, new { htmlAttributes = new { @class = "form-control", id = "blok_input" } })
                 @Html.ValidationMessageFor(model => model.Block, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Site, "Predio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Site, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Site, new { htmlAttributes = new { @class = "form-control", id = "site_input" } })
                 @Html.ValidationMessageFor(model => model.Site, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +66,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Page, "Foja", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Page, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Page, new { htmlAttributes = new { @class = "form-control", id = "page_input" } })
                 @Html.ValidationMessageFor(model => model.Page, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -73,7 +75,7 @@
             @Html.LabelFor(model => model.InscriptionNumber, "Numero de Inscripción", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.InscriptionNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InscriptionNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.InscriptionNumber, "", new { @class = "text-danger", id = "inscription_number_input" })
             </div>
         </div>
 
