code design changes

--- a/WebApplication1/WebApplication1/Views/Acquirers/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Acquirers/Index.cshtml
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.Person.Rut)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { rut = item.Rut, atentionnumber = item.AtentionNumber }) |
-            @Html.ActionLink("Details", "Details", new { rut = item.Rut, atentionnumber = item.AtentionNumber }) |
-            @Html.ActionLink("Delete", "Delete", new { rut = item.Rut, atentionnumber = item.AtentionNumber })
+            @Html.ActionLink("Edit", "Edit", new { rut = item.Rut, atentionNumber = item.AtentionNumber }) |
+            @Html.ActionLink("Details", "Details", new { rut = item.Rut, atentionNumber = item.AtentionNumber }) |
+            @Html.ActionLink("Delete", "Delete", new { rut = item.Rut, atentionNumber = item.AtentionNumber })
         </td>
     </tr>
 }
