--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -133,7 +133,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <button id="submit_button" name="users_info" type="submit" value="" class="btn btn-default">Enviar</button>
+                <button id="submit_button" name="usersInfo" type="submit" value="" class="btn btn-default">Enviar</button>
             </div>
         </div>
     </div>
