refactor MultiProperties vista

--- a/WebApplication1/WebApplication1/Views/Inscriptions/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Index.cshtml
@@ -30,7 +30,7 @@
             Foja
         </th>
         <th>
-            Numero de Inscripcíon
+            N° de Inscripcíón
         </th>
         <th>
             Fecha de Inscripción
