--- a/WebApplication1/WebApplication1/Views/Multyproperties/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Multyproperties/Index.cshtml
@@ -27,38 +27,38 @@
     <tr>
 
         <th>
-            @Html.DisplayNameFor(model => model.Percentage)
+            Porcentage
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Rut)
+            Rut
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Comunne)
+            Comuna
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Block)
+            Manzana
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Site)
+            Predio
         </th>
 
         <th>
-            @Html.DisplayNameFor(model => model.Page)
+            Foja
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InscriptionNumber)
+            N° de Inscripción
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InscriptionYear)
+            Año de Inscripción
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InscriptionDate)
+            Fecha de Inscripción
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StartCurrencyYear)
+            Vigencia Inicial
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EndCurrencyYear)
+            Vigencia Final
         </th>
         <th></th>
     </tr>
