--- a/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Inscriptions/Create.cshtml
@@ -82,7 +82,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InscriptionDate, "Fecha de Inscripción", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InscriptionDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                @Html.EditorFor(model => model.InscriptionDate, new { htmlAttributes = new { @class = "form-control", type = "date", id = "date_inscription" } })
                 @Html.ValidationMessageFor(model => model.InscriptionDate, "", new { @class = "text-danger" })
             </div>
         </div>
